git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@233 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/Keeley.tt
+++ b/StoredProcedureGenerator/Keeley.tt
@@ -4,7 +4,7 @@
 <#@ include file="CrudProcedureGenerator.tt" #> 
 <# 
     CrudProcedureGenerator generator = new CrudProcedureGenerator(); 
-   	generator.ServerName = @"(local)\SQLEXPRESS";   
+   	generator.ServerName = @"sql02";   
 	generator.DatabaseName = @"Keeley"; 
 	string outputPath = @"..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\";
 	generator.DeletePath = outputPath;
