When varbinary type add MAX length
git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@7003 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/InsertProcedureTemplate.tt
+++ b/StoredProcedureGenerator/InsertProcedureTemplate.tt
@@ -61,6 +61,11 @@ public class InsertProcedureTemplate : Template
 				{
 					this.Write("(" + column.DataType.NumericPrecision.ToString() + "," + column.DataType.NumericScale.ToString() + ")");
 				}
+				else if (column.DataType.Name == "varbinary")
+				{
+					this.Write("(MAX)");
+				}
+				
 				insertColumnList = String.Format("{0}{1}",insertColumnList,column.Name);			
 				insertParameterList = String.Format("{0}@{1}",insertParameterList,column.Name);							
 			}				
